--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gonder",
+  "name": "pdf-chat",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pdftron/webviewer": "^10.2.3",
+    "@pinecone-database/pinecone": "^0.1.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "ai": "^2.1.12",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
+    "encoding": "^0.1.13",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "langchain": "^0.0.102",
+    "lucide-react": "^0.257.0",
     "next": "13.4.7",
+    "openai-edge": "^1.1.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "tailwindcss-animate": "^1.0.6",
+    "typescript": "5.1.3",
+    "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "hnswlib-node": "^2.0.0"
   }
 }
