--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pdf-chat",
+  "name": "ai-chat",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.2.6",
     "ai": "^2.1.12",
     "autoprefixer": "10.4.14",
+    "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "encoding": "^0.1.13",
