--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "ai": "^2.1.12",
+    "ai": "^2.1.17",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
@@ -31,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-json-view": "^1.21.3",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
